# awsaml

./: .editorconfig  Cargo.toml  Tasks.md
.devcontainer/: devcontainer.json
src/: aws.rs  cmd.rs  lib.rs  main.rs  saml.rs
src/aws/: assume_role.rs  config.rs  credentials.rs
src/cmd/: config.rs  prompt.rs
src/saml/: chrome.rs  entra_id.rs  req.rs  res.rs
