[package]
name = "awsaml"
version = "0.1.0"
edition = "2021"
description = "AWS SAML login helper"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.13"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", tag = "1.0.15", features = [
  "fetch",
] }
rust-ini = "0.21.1"
