[package]
name = "awsaml"
version = "0.1.0"
edition = "2021"
description = "AWS SAML login helper"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.13"
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = [
  "std",
  "now",
] }
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
flate2 = "1.0.35"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", tag = "1.0.15", features = [
  "fetch",
] }
log = "0.4.25"
rust-ini = "0.21.1"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.11.1", features = ["v4"] }

[dev-dependencies]
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
